<resources>
    <string name="app_name">Simple To Do</string>
    <string name="header">Simple To-Do List</string>
    <string name="listHeader">Things To Do:</string>
    <string name="taskEditText">Type in a new task here</string>
    <string name="btnAdd">ADD</string>
    <string name="btnClear">CLEAR</string>
    <string name="btnDelete">DELETE</string>
    <string-array name="spinnerItems">
        <item>Add a new task</item>
        <item>Remove a task</item>
    </string-array>
</resources>